<resources>
    <string name="app_name">SpoiledApps</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="i_agree">I Agree!</string>
    <string name="registration_page">Registration Page</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="do_you_agree_to_be_proper_and_respectful_on_this_app_do_you_also_agree_that_all_of_the_information_entered_is_correct_check_the_box_below_if_you_agree">Do you agree to be proper and respectful on this app? Do you also agree that all of the information entered is correct? Check the box below if you agree.</string>
    <string name="first_name">First Name</string>
    <string name="please_create_a_username_and_password_for_your_account">Please create a username and password for your account!</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="let_s_spoil_some_apps">Let\'s spoil some apps!</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign in!</string>
    <string name="not_a_user_register_now">Not a user? Register now!</string>
    <string name="spoiledapps">SpoiledApps</string>
    <string name="Writereview">Write Review!</string>
    <string name="title_activity_add_app_page">AddAppPage</string>
    <string name="AddAppTitle">Add a New App to SpoiledApps!</string>
    <string name="CopyPasteInstruction">Copy Paste Play Store Link Here!</string>

    <string name="ReviewHeadline">Your Review Headline Here</string>
    <string name="Rating">Enter Your Overall Percentage Rating As a Decimal Below:</string>
    <string name="Pros">Pros:</string>
    <string name="Cons">Cons:</string>
    <string name="FavFeature">Favorite Feature:</string>
    <string name="LeastFavFeature">Least Favorite Feature:</string>
    <string name="FreeformEntry">Please Write your Review Here:</string>
    <string name="ReviewInstructions">HINT!: Don\'t forget to include what you use the app for and to what extent and for how long!</string>
    <string name="ReviewSubmitButton">Submit Review</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_write_review_page">WriteReviewPage</string>
    <string name="resend_email">Resend Email!</string>
    <string name="didn_t_get_a_verification_email_click_the_button_below_to_resend_an_email_to_your_account">Didn\'t get a verification email? Click the button below to resend an email to your account!</string>
    <string name="you_still_have_not_verified_your_account_please_go_to_your_inbox_to_verify_now_to_use_spoiledapps">You still have not verified your account! Please go to your inbox to verify now to use SpoiledApps!</string>
    <string name="back_to_login_page">Back to Login Page</string>
    <string name="go_back_to_login_page">Go back to login page!</string>
    <string name="reset_password_now">Reset password now!</string>
    <string name="title_activity_app_list">AppListActivity</string>
    <string name="enter_app_name">ENTER APP NAME</string>
    <string name="enter_app_company_name">ENTER APP COMPANY NAME</string>
    <string name="add_app_to_listing">Add App To Listing!</string>
    <string name="forgot_password">Forgot password</string>
</resources>
