<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/registrationBackground"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/back3"
                                                   android:clickable="false">

    <Button
            android:id="@+id/registrationButton"
            android:layout_width="190dp"
            android:layout_height="63dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="130dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="204dp"
            android:background="#B9F6CA"
            android:onClick="submitRegistration"
            android:text="@string/let_s_spoil_some_apps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent" android:textColorHint="#0C0C0C" android:textColor="#121111"
            android:textStyle="bold"/>
    <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="194dp"
            android:layout_marginRight="194dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pageTitle" android:fontFamily="sans-serif-black"
            android:background="#FFFFFF" android:textColor="#242222" android:textColorHint="#0C0C0C"
            android:textStyle="bold|italic"/>

    <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="193dp"
            android:layout_marginRight="193dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" android:background="#FFFFFF"
            android:textColor="#121212" android:textColorHint="#0C0C0C" android:textStyle="bold|italic"/>

    <EditText
            android:id="@+id/editText3"
            android:layout_width="246dp"
            android:layout_height="54dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="194dp"
            android:layout_marginRight="194dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageToUser" android:background="#FFFFFF"
            android:textColorHint="#0C0C0C" android:textStyle="bold|italic" android:drawableLeft="@drawable/icon15"
            app:layout_constraintHorizontal_bias="0.297" android:drawableStart="@drawable/icon15"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="246dp"
            android:layout_height="54dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="193dp"
            android:layout_marginRight="193dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" android:background="#FFFFFF"
            android:textStyle="bold|italic" android:textColorHint="#0C0C0C" android:drawableLeft="@drawable/color2"
            app:layout_constraintHorizontal_bias="0.211" android:drawableStart="@drawable/color2"/>
    <EditText
            android:id="@+id/emailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="193dp"
            android:layout_marginRight="193dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName" android:background="#FFFFFF"
            android:textColorHint="#0C0C0C" android:textStyle="bold|italic"/>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="174dp"
            android:layout_marginLeft="174dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="189dp"
            android:layout_marginRight="189dp"
            android:layout_marginBottom="14dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/backtoLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationButton"/>

    <TextView
            android:id="@+id/pageTitle"
            android:layout_width="314dp"
            android:layout_height="74dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:layout_marginBottom="19dp"
            android:fontFamily="@font/biryani_bold"
            android:text="@string/registration_page"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:background="#B388FF"
            android:drawableStart="@drawable/icon11"/>
    <TextView
            android:id="@+id/messageToUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/please_create_a_username_and_password_for_your_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress" android:background="#FFFFFF"
            android:textColorHint="#0C0C0C" android:textColor="#0C0C0C" android:textStyle="bold"/>

    <Button
            android:id="@+id/backtoLogin"
            android:layout_width="190dp"
            android:layout_height="41dp"
            android:layout_marginStart="115dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:background="#FFEB3B"
            android:text="@string/back_to_login_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" android:textStyle="bold|italic"
            android:textColor="#171616"/>

</androidx.constraintlayout.widget.ConstraintLayout>