<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".verificationPage">

    <TextView
        android:id="@+id/notVerifiedMessage"
        android:layout_width="332dp"
        android:layout_height="85dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="332dp"
        android:fontFamily="@font/aldrich"
        android:lineSpacingExtra="8sp"
        android:text="@string/you_still_have_not_verified_your_account_please_go_to_your_inbox_to_verify_now_to_use_spoiledapps"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resendMessage"
        android:layout_width="363dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/aldrich"
        android:lineSpacingExtra="8sp"
        android:text="@string/didn_t_get_a_verification_email_click_the_button_below_to_resend_an_email_to_your_account"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notVerifiedMessage" />

    <Button
        android:id="@+id/resendEmail"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_marginStart="141dp"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="86dp"
        android:background="#FFEB3B"
        android:text="@string/resend_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendMessage" />

    <Button
        android:id="@+id/backtoLogIn"
        android:layout_width="188dp"
        android:layout_height="46dp"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="234dp"
        android:background="#FFEB3B"
        android:text="@string/go_back_to_login_page"
        app:layout_constraintBottom_toTopOf="@+id/resendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notVerifiedMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>