<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/backdrop"
                                                   tools:context=".LoginActivity">

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"

            android:autofillHints=""
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:cursorVisible="true"
            android:drawableLeft="@android:drawable/ic_dialog_email" app:layout_constraintHorizontal_bias="0.0"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@android:drawable/ic_dialog_email" android:textColor="#000000"
            android:textColorLink="#0B0A0A" android:textColorHint="#000000" android:textColorHighlight="#EA1818"
            android:textSize="18sp"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            android:autofillHints=""
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" android:textColor="#070707"
            android:textColorHighlight="#EA1313" android:textColorHint="#0B0B0B" android:textColorLink="#0E0D0D"
            android:drawableLeft="@android:drawable/ic_lock_lock" android:drawableStart="@android:drawable/ic_lock_lock"
            android:textSize="18sp"/>

    <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:layout_marginBottom="295dp"
            android:background="#B2FF59"
            android:enabled="true"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/forgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:id="@+id/RegisterButton"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginStart="101dp"
            android:layout_marginLeft="101dp"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="107dp"
            android:layout_marginRight="107dp"
            android:layout_marginBottom="112dp"
            android:background="#FF8A80"
            android:text="@string/not_a_user_register_now"
            android:textColor="#090909"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:id="@+id/loginTitle"
            android:layout_width="262dp"
            android:layout_height="58dp"
            android:layout_marginStart="117dp"
            android:layout_marginLeft="117dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="93dp"
            android:layout_marginRight="93dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/biryani_bold"
            android:text="@string/spoiledapps"
            android:textColor="#9C27B0"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" android:textAllCaps="false" android:background="#F4F3F3"/>
    <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="181dp"
            android:layout_marginLeft="181dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="182dp"
            android:layout_marginRight="182dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword"/>

    <Button
            android:id="@+id/forgotPassword"
            android:layout_width="173dp"
            android:layout_height="46dp"
            android:layout_marginStart="47dp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="39dp"
            android:background="#E6FF5252"
            app:layout_constraintBottom_toTopOf="@+id/progressBar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" android:text="@string/forgot_password"/>
    <ImageView
            android:layout_width="102dp"
            android:layout_height="90dp" app:srcCompat="@drawable/icon3" android:id="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/RegisterButton" tools:layout_editor_absoluteY="546dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>